<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".fragment.IntroSatuFragment">

    <TextView
        android:id="@+id/txt_bantuan_intro_satu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bantuan_fruit_detection"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txt_title_intro_satu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_intro_dua"
        android:textColor="@color/gold"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/txt_desc_intro_satu"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/desc_intro_dua"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_gravity="center"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/intro_dua"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        />

</LinearLayout>