<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_mainbg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"/>

    <ImageView
        android:id="@+id/iv_logomain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/logo"
        android:layout_marginHorizontal="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_mulai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logomain"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_button"
        android:layout_marginHorizontal="30dp"
        app:icon="@drawable/ic_baseline_arrow_forward_ios_24"
        app:iconGravity="end"
        android:text="@string/mulai"
        android:textAlignment="center"
        app:iconSize="0dp"
        app:iconPadding="0dp"
        android:elevation="6dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_tentang_aplikasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_mulai"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="60dp"
        android:text="@string/tentang_aplikasi"
        android:textColor="@color/white"
        android:elevation="6dp"
        android:background="@drawable/shape_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_keluar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:layout_marginHorizontal="90dp"
        android:text="@string/keluar"
        android:textColor="@color/white"
        android:layout_below="@+id/btn_tentang_aplikasi"
        android:layout_marginTop="15dp"
        android:elevation="6dp"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_instagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_keluar"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_ig"
        android:background="@android:color/transparent"
        android:layout_marginLeft="150dp"
        android:elevation="6dp"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/btn_instagram"
        android:layout_below="@+id/btn_keluar"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/ic_github"
        android:background="@android:color/transparent"
        android:elevation="6dp"
        />

</RelativeLayout>